crates/lexer/src/snapshots/lexer__tests__labels.snap
---
source: crates/lexer/src/tests.rs
description: "'loop 'end"
expression: "lex(input).collect :: < Vec < _ >> ()"
---
[
    Label(5),
    Whitespace(1),
    Label(4),
]
