crates/lexer/src/snapshots/lexer__tests__raw_string.snap
---
source: crates/lexer/src/tests.rs
description: "''raw string here"
expression: "lex(input).collect :: < Vec < _ >> ()"
---
[
    Literal(17),
]
