crates/lexer/src/snapshots/lexer__tests__simple_binding.snap
---
source: crates/lexer/src/tests.rs
description: "x: Int = 42;"
expression: "lex(input).collect :: < Vec < _ >> ()"
---
[
    Ident(1),
    Colon(1),
    Whitespace(1),
    Ident(3),
    Whitespace(1),
    Eq(1),
    Whitespace(1),
    Literal(2),
    Semi(1),
]
