crates/lexer/src/snapshots/lexer__tests__string_with_comment_inside.snap
---
source: crates/lexer/src/tests.rs
description: "\"hello // world\""
expression: "lex(input).collect :: < Vec < _ >> ()"
---
[
    Literal(16),
]
