crates/lexer/src/snapshots/lexer__tests__string_with_escape.snap
---
source: crates/lexer/src/tests.rs
description: "\"hello\\nworld\""
expression: "lex(input).collect :: < Vec < _ >> ()"
---
[
    Literal(14),
]
