crates/lexer/src/snapshots/lexer__tests__unicode_identifiers.snap
---
source: crates/lexer/src/tests.rs
description: café 变量
expression: "lex(input).collect :: < Vec < _ >> ()"
---
[
    Ident(5),
    Whitespace(1),
    Ident(6),
]
